WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60922
[GTK] Scrolling in Twitter is broken after
r86102
https://bugs.webkit.org/show_bug.cgi?id=60922
Summary
[GTK] Scrolling in Twitter is broken after r86102
Martin Robinson
Reported
2011-05-16 13:59:35 PDT
Twitter triggers the slow scrolling path, which has a different ChromeClient end point. This means that currently when you scroll on Twitter with the mouse wheel, the adjustments are not updated.
Attachments
Patch
(1.83 KB, patch)
2011-05-16 14:02 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-05-16 14:02:19 PDT
Created
attachment 93691
[details]
Patch
Xan Lopez
Comment 2
2011-05-16 14:10:52 PDT
Comment on
attachment 93691
[details]
Patch Bam.
WebKit Commit Bot
Comment 3
2011-05-16 16:03:09 PDT
Comment on
attachment 93691
[details]
Patch Clearing flags on attachment: 93691 Committed
r86627
: <
http://trac.webkit.org/changeset/86627
>
WebKit Commit Bot
Comment 4
2011-05-16 16:03:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug